# highscores-api

./: pyproject.toml
src/highscores_api/: database.py  main.py  models.py
