[project]
authors = [{name = "sirwilliamthefirst", email = "30707549+sirwilliamthefirst@users.noreply.github.com"}]
dependencies = []
name = "Highscores_API"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
highscores_api = { path = ".", editable = true }

[tool.pixi.tasks]
